# isomatch

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  nohup.out
.github/workflows/: release.yml
docs/: evidence_bed.md  isomatch_classification_policy.md  merge-flowchart.drawio  merge-flowchart.md
evidence/: human.chrmap.tsv
script/: extract_terminals_by_gene.py  measure_chrom_peak_memory.py  perturb_gtf_splice_sites.py  rename_fasta_seqid.py  verify_index_stats.py
src/: constants.rs  fasta.rs  gtf.rs  main.rs  traits.rs  utils.rs
src/classify/: class_code.rs  classification_code.rs  classify_error.rs  classify_policy.rs  classify_policy.rs.bak  compare.rs  group3and4.txt  isofrom_src_entry.rs  mod.rs  query_ptir.rs  ref_ptir.rs  ref_ptir_manager.rs
src/core/: TxBase.rs  TxBaseError.rs  TxBaseImpl.rs  TxBoundary.rs  core_error.rs  junction_pool.rs  mod.rs  ptir.rs  splice_site_pair.rs  splice_site_pool.rs  splice_site_span.rs  status.rs  string_pool.rs  tx_base.rs  tx_base_error.rs  tx_base_flag.rs  tx_base_impl.rs  tx_boundary.rs  tx_strand.rs  tx_type.rs
src/index/: attributes_index.rs  builder.rs  format.rs  gtf.rs  index_error.rs  mod.rs  reader.rs
src/merge/: grouped_ptirs.rs  guide.rs  merge_error.rs  mod.rs  mptir.rs  mtx.rs  policy.rs
src/tools/: chop.rs  mod.rs  tools_error.rs  valtable.rs
toy_ex/: README.md  ref.fa.gz.fai
